--- a/client/app/login/register.html
+++ b/client/app/login/register.html
@@ -1,3 +1,5 @@
+<!-- login UI author by worldcoolguy-->
+
 <script src='https://www.google.com/recaptcha/api.js'></script>
 <div class="page-signup">
     <div class="wrapper-register">
