--- a/client/app/login/register.html
+++ b/client/app/login/register.html
@@ -1,6 +1,6 @@
 <!-- login UI author by worldcoolguy-->
 
-<script src='https://www.google.com/recaptcha/api.js'></script>
+<script src='https://www.google.com/recaptcha/api.js'></script> <!--add recaptcha-->
 <div class="page-signup">
     <div class="wrapper-register">
         <div class="main-body">
@@ -25,14 +25,14 @@
                                     <div class="ui-input-group">
                                         <input type="text" ng-model="registerCtrl.document" phoneformat phoneType="id" class="form-control" required>
                                         <span class="input-bar"></span>
-                                        <label>N&uacute;mero de c&eacute;dula</label>
+                                        <label>N&uacute;mero de c&eacute;dula (necesita 10 caracteres)</label>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="ui-input-group">
                                       <input type="text" ng-model="registerCtrl.cellphone"  phoneformat phoneType="phone" class="form-control" required>
                                       <span class="input-bar"></span>
-                                      <label>N° Celular</label>
+                                      <label>N° Celular (necesita 10 caracteres)</label>
                                   </div>
                                 </div>
                                 <div class="form-group">
